# cim-domain-location

./: .gitignore  CHANGELOG.md  CONVERSION_ASSESSMENT.md  CONVERSION_COMPLETE.md  Cargo.toml  README.md  flake.nix  readme.md
deployment/: CONTAINER_DEPLOYMENT.md  LEAF_NODE_DEPLOYMENT.md
deployment/nix/: container.nix  darwin.nix  leaf.nix  lxc.nix
doc/: api.md  user-stories.md
docs/integration/: README.md
docs/migration/: README.md
docs/performance/: README.md
docs/security/: README.md
docs/troubleshooting/: README.md
examples/: location_management.rs
src/: domain_events.rs  lib.rs
src/adapters/: mod.rs  nats_event_publisher.rs
src/aggregate/: location.rs  mod.rs
src/commands/: commands.rs  mod.rs
src/events/: events.rs  mod.rs
src/handlers/: authentication_event_handler.rs  location_command_handler.rs  location_query_handler.rs  mod.rs
src/infrastructure/: location_repository.rs  mod.rs  nats_integration.rs
src/nats/: message_identity.rs  mod.rs  subjects.rs
src/ports/: event_publisher.rs  mod.rs
src/projections/: mod.rs
src/queries/: mod.rs
src/services/: geocoding.rs  hierarchy_management.rs  location_validation.rs  mod.rs  region_analysis.rs  spatial_search.rs  tracking.rs
src/value_objects/: address.rs  coordinates.rs  location_types.rs  mod.rs  virtual_location.rs
src/workflow/: definitions.rs  location_workflows.rs  manager.rs  mod.rs
tests/: location_tests.rs
