[package]
name = "cim-domain-location"
version = "0.3.0"
edition = "2021"
authors = ["The CowboyAI Team"]
description = "Location domain for the Composable Information Machine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/cim-domain-location"
keywords = ["location", "domain", "ddd", "event-sourcing", "cim"]
categories = ["data-structures", "asynchronous"]

[dependencies]
# Core dependencies
cim-domain = { path = "../cim-domain" }
cim-subject = { path = "../cim-subject" }
cim-infrastructure = { path = "../cim-infrastructure" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = "2.7"

# URL parsing
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.6"
