[package]
name = "cim-domain-location"
version = "0.8.0"
edition = "2021"
authors = ["Cowboy AI, LLC <contact@cowboy.ai>"]
description = "CIM-compliant location management system with geospatial services and hierarchical organization"
license = "MIT"
homepage = "https://github.com/thecowboyai/cim-domain-location"
repository = "https://github.com/thecowboyai/cim-domain-location"
keywords = ["location", "domain", "ddd", "event-sourcing", "cim", "geospatial"]
categories = ["data-structures", "asynchronous"]

[dependencies]
# Core dependencies
cim-domain = { git = "https://github.com/TheCowboyAI/cim-domain.git", tag = "v0.8.1" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# NATS messaging
async-nats = "0.38"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CID support for content addressing
cid = "0.11"

# Cryptographic hashing
sha2 = "0.10"
hex = "0.4"

# Collections
indexmap = "2.7"

# URL parsing for virtual locations
url = "2.5"

# Regular expressions for validation
regex = "1.10"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Geospatial calculations
geo = "0.26"

# Random number generation for testing
rand = "0.8"

[[bin]]
name = "location-service"
path = "src/bin/location-service.rs"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.6"
mockall = "0.11"
